--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
         volumes:
             - postgres-data:/var/lib/postgresql/data
         environment:
-            - POSTGRES_MULTIPLE_DATABASES=users,products,
+            - POSTGRES_MULTIPLE_DATABASES=users,products,clothing,subscriptions
             - POSTGRES_PASSWORD=test-databases
         ports:
             - 15432:5432
