--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,14 @@ services:
             - POSTGRES_PASSWORD=test-databases
         ports:
             - 15432:5432
+    products:
+        build:
+            context: ./products
+            dockerfile: ./Dockerfile.dev
+        ports:
+            - "8080:8000"
+        volumes:
+            - ./products:/app
+        environment:
+            DATABASE_URL: postgresql://user-name:password@postgres/products
+            WAIT_HOSTS: postgres:5432
