--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,3 +35,15 @@ services:
         environment:
             DATABASE_URL: postgresql://user-name:password@postgres/users
             WAIT_HOSTS: postgres:5432
+
+    subscriptiopns:
+        build:
+            context: ./subscriptions
+            dockerfile: ./Dockerfile.dev
+        ports:
+            - "8200:8000"
+        volumes:
+            - ./subscriptions:/app
+        environment:
+            DATABASE_URL: postgresql://user-name:password@postgres/users
+            WAIT_HOSTS: postgres:5432
