--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
         environment:
             DATABASE_URL: postgresql://products:password@postgres/products
             WAIT_HOSTS: postgres:5432
+            WAIT_TIMEOUT: 240
     users:
         build:
             context: ./users
@@ -35,6 +36,7 @@ services:
         environment:
             DATABASE_URL: postgresql://users:password@postgres/users
             WAIT_HOSTS: postgres:5432
+            WAIT_TIMEOUT: 240
     subscriptions:
         build:
             context: ./subscriptions
@@ -46,6 +48,7 @@ services:
         environment:
             DATABASE_URL: postgresql://subscriptions:password@postgres/subscriptions
             WAIT_HOSTS: postgres:5432
+            WAIT_TIMEOUT: 240
     clothing:
         build:
             context: ./clothing
@@ -57,6 +60,7 @@ services:
         environment:
             DATABASE_URL: postgresql://clothing:password@postgres/clothing
             WAIT_HOSTS: postgres:5432
+            WAIT_TIMEOUT: 240
     ghi:
         image: node:lts-bullseye
         command: /bin/bash run.sh
