--- a/users/requirements.txt
+++ b/users/requirements.txt
@@ -1,27 +1,24 @@
-aiohttp==3.7.4.post0
-anyio==3.6.1
-async-timeout==3.0.1
-attrs==21.4.0
-black==22.6.0
-chardet==4.0.0
-click==8.1.3
-colorama==0.4.5
-discord.py==1.7.3
-h11==0.13.0
-httptools==0.4.0
+asgiref==3.5.0
+black==22.3.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.2
+dj-database-url==0.5.0
+django-cors-headers==3.11.0
+Django==4.0.3
+djwto @ git+https://github.com/hr-curtissimo/djwto.git
+flake8==4.0.1
+gunicorn==20.1.0
 idna==3.3
-multidict==6.0.2
+mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
-platformdirs==2.5.2
-pydantic==1.9.1
-python-dotenv==0.20.0
-PyYAML==6.0
-sniffio==1.2.0
-starlette==0.19.1
+platformdirs==2.5.1
+psycopg2==2.9.3
+pycodestyle==2.8.0
+pyflakes==2.4.0
+requests==2.27.1
+sqlparse==0.4.2
 tomli==2.0.1
-typing_extensions==4.3.0
-uvicorn==0.18.2
-watchfiles==0.15.0
-websockets==10.3
-yarl==1.7.2
+urllib3==1.26.9
+whitenoise==5.3.0
