--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
         volumes:
             - postgres-data:/var/lib/postgresql/data
         environment:
-            - POSTGRES_MULTIPLE_DATABASES=users,products,clothing,subscriptions
+            - POSTGRES_MULTIPLE_DATABASES=products,subscriptions
             - POSTGRES_PASSWORD=test-databases
         ports:
             - 15432:5432
@@ -24,17 +24,6 @@ services:
         environment:
             DATABASE_URL: postgresql://products:password@postgres/products
             WAIT_HOSTS: postgres:5432
-    users:
-        build:
-            context: ./users
-            dockerfile: ./Dockerfile.dev
-        ports:
-            - "8100:8000"
-        volumes:
-            - ./users:/app
-        environment:
-            DATABASE_URL: postgresql://users:password@postgres/users
-            WAIT_HOSTS: postgres:5432
     subscriptions:
         build:
             context: ./subscriptions
@@ -45,17 +34,6 @@ services:
             - ./subscriptions:/app
         environment:
             DATABASE_URL: postgresql://subscriptions:password@postgres/subscriptions
-            WAIT_HOSTS: postgres:5432
-    clothing:
-        build:
-            context: ./clothing
-            dockerfile: ./Dockerfile.dev
-        ports:
-            - "8210:8000"
-        volumes:
-            - ./clothing:/app
-        environment:
-            DATABASE_URL: postgresql://clothing:password@postgres/clothing
             WAIT_HOSTS: postgres:5432
     ghi:
         image: node:lts-bullseye
