--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 volumes:
     postgres-data:
         external: true
+    pgadmin:
+        external: true
 services:
     postgres:
         image: postgres:14.2-bullseye
@@ -65,3 +67,12 @@ services:
             REACT_APP_SUBSCRIPTIONS: http://localhost:8200
             REACT_APP_SUBSCRIPTIONS_POLLER: http://localhost:8100
             REACT_APP_PRODUCTS: http://localhost:8080
+    pgadmin:
+        image: dpage/pgadmin4
+        volumes:
+            - pgadmin/var/lib/pgadmin4
+        ports:
+            - "8060:80"
+        environment:
+            PGADMIN_DEFAULT_EMAIL: 'rbbitphoto@gmail.com'
+            PGADMIN_DEFAULT_PASSWORD: 'password'
