added navbar to the project, installed react-router-dom

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
             - "8080:8000"
         volumes:
             - ./products:/app
+        depends_on:
+            - postgres
         environment:
             DATABASE_URL: postgres://products:password@postgres:5432/products
             WAIT_HOSTS: postgres:5432
@@ -73,7 +75,7 @@ services:
     pgadmin:
         image: dpage/pgadmin4
         volumes:
-            - pgadmin/var/lib/pgadmin4
+            - ./pgadmin/var/lib/pgadmin4
         ports:
             - "8060:80"
         environment:
