Added AboutUs page. Deleted Nav and App, since we're using NavBar and index instead. Made CSS changes to SignUp form.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
     pgadmin:
         image: dpage/pgadmin4
         volumes:
-            - ./pgadmin/var/lib/pgadmin4
+            - /pgadmin/var/lib/pgadmin4
         ports:
             - "8060:80"
         environment:
