--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,6 +55,7 @@ services:
       - postgres
       - subscriptions
     environment:
+      PRODUCTS: http://products:8000
       DJWTO_SIGNING_KEY: 517e7f819f5ef0f397e91a9a746a95fbdd5095a4c89665fe567d7df2e8095f95
       DATABASE_URL: postgres://subscriptions:password@postgres:5432/subscriptions
       WAIT_HOSTS: postgres:5432,subscriptions:8000
